--- a/assets/style.css
+++ b/assets/style.css
@@ -7,7 +7,7 @@
 }
 
 body {
-  overflow: hidden;
+  overflow-x: hidden;
   background-color: var(--dark) !important;
   color: var(--white) !important;
 }
@@ -53,6 +53,8 @@ input:focus, btn:focus{
 .ivu-layout {
   background-color: transparent;
   color: unset;
+  display: block;
+  overflow: unset;
 }
 
 .ivu-dropdown-menu {
