in excahnge page, completed the table, fixed pagination button & increased the request interval

--- a/assets/style.css
+++ b/assets/style.css
@@ -171,4 +171,8 @@ input:focus, btn:focus{
     display: block;
     width: 100% !important;
   }
+  .sm-ms-0, .ms-3, .sm-ps-0{
+    margin-left: 0 !important;
+    padding-left: 0 !important;
+  }
 }
